Changed technology logos paths

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             document.querySelector(href.substr(href.indexOf('#'), href.length)).scrollIntoView({ behavior: 'smooth' });
         }
         const techLogo = {
-            "Python": "python.PNG",
-            "Java": "java.PNG",
-            "C++": "cpp.PNG",
-            "Figma": "figma.PNG"
+            "Python": "python.png",
+            "Java": "java.png",
+            "C++": "cpp.png",
+            "Figma": "figma.png"
         }
         document.querySelectorAll(".project li").forEach(li => {
             const text = li.textContent;
