--- a/index.html
+++ b/index.html
@@ -9,34 +9,104 @@
 </head>
 
 <body>
-    <header>
-        <h1>Imad Majid</h1>
-        <nav class="menu">
-            <ul>
-                <li><a href="#landing">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#workflow">Workflow</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <ul>
+            <li><a href="#landing" class="current" id="landing-a"><span>📌</span></a></li>
+            <li><a href="#projects" id="projects-a"><span>📂</span></a></li>
+            <li><a href="#contact" id="contact-a"><span>📧</span></a></li>
+            <li><a href="#workflow" id="workflow-a"><span>🚀</span></a></li>
+        </ul>
+    </nav>
 
     <section id="landing">
-        <h1>IMAD MAJID</h1>
-        <p>Full-stack Developer</p>
-        <p>I'm currently a lead developer at
-            <a href="https://github.com/hans-labs">
-                Han's Labs
-            </a>
-        </p>
+        <div id="table">
+
+            <div>😊</div>
+            <div>IMAD MAJID</div>
+
+
+            <div>💼</div>
+            <div>Full-Stack Developer</div>
+
+
+            <div>✨</div>
+            <div>
+                <span>Lead developer at
+                    <a href="https://github.com/hans-labs">
+                        Han's Labs
+                    </a>
+                </span>
+            </div>
+
+
+            <div>✍️</div>
+            <div>
+                <div id="languages">
+                    <span>French</span>
+                    <span>Japanese</span>
+                    <span>Chinese</span>
+                    <span>German</span>
+                    <span>Arabic</span>
+                    <span>English</span>
+                    <span>Russian</span>
+                    <span>Spanish</span>
+                    <span>Indian</span>
+                </div>
+            </div>
+
+
+            <div>🧠</div>
+            <div>
+                <div id="skills">
+                    <span>AI Dev</span>
+                    <span>IOS App Dev</span>
+                    <span>Android App Dev</span>
+                    <span>Web Dev</span>
+                    <span>Small Web Dev</span>
+                    <span>Medium Web Dev</span>
+                    <span>Big Web Dev</span>
+                </div>
+            </div>
+
+
+            <div>🧰</div>
+            <div>
+                <div id="technologies">
+                    <span>JavaScript</span>
+                    <span>Python</span>
+                    <span>Java</span>
+                    <span>TypeScript</span>
+                    <span>Go</span>
+                    <span>Rust</span>
+                    <span>C++</span>
+                    <span>Flutter</span>
+                    <span>FireBase</span>
+                    <span>TensorFlow</span>
+                    <span>PyTorch</span>
+                    <span>Figma</span>
+                </div>
+            </div>
+
+
+            <div>🌟</div>
+            <div>
+                <a href="https://emad.framer.ai" target="_blank">
+                    emad.framer.ai
+                </a>
+            </div>
+
+
+        </div>
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2>📂 Projects</h2>
         <div id="project-slider">
             <div class="project" style="background-image: url('https://i.giphy.com/2NJkigfPiu2dmpZg99.webp');">
 
+                <span class="emoji">🍕</span>
                 <span class="title">Title</span>
+                <span class="date">2024-01-11</span>
                 <ul>
                     <li>Java</li>
                     <li>C++</li>
@@ -44,12 +114,17 @@
                     <li>Python</li>
                 </ul>
                 <span class="one-line-desc">Single line description</span>
+                <a href="#">
+                    🔗
+                </a>
             </div>
 
 
             <div class="project" style="background-image: url('https://i.giphy.com/UXAflRaNRM3R5iY4jQ.webp');">
 
+                <span class="emoji">📚</span>
                 <span class="title">Title</span>
+                <span class="date">2024-01-11</span>
                 <ul>
                     <li>Java</li>
                     <li>C++</li>
@@ -57,12 +132,17 @@
                     <li>Python</li>
                 </ul>
                 <span class="one-line-desc">Single line description</span>
+                <a href="#">
+                    🔗
+                </a>
             </div>
 
 
             <div class="project" style="background-image: url('https://i.giphy.com/rcLvBCW7cMzYeE1CEQ.webp');">
 
+                <span class="emoji">🎵</span>
                 <span class="title">Title</span>
+                <span class="date">2024-01-11</span>
                 <ul>
                     <li>Java</li>
                     <li>C++</li>
@@ -70,44 +150,141 @@
                     <li>Python</li>
                 </ul>
                 <span class="one-line-desc">Single line description</span>
+                <a href="#">
+                    🔗
+                </a>
             </div>
         </div>
     </section>
 
-    <section id="workflow">
-        <h2>Workflow</h2>
-    </section>
-
     <section id="contact">
-        <h2>Contact</h2>
-        <p>Email me at
+        <h2>📧 Let's Touch</h2>
+
+        <div id="contact-links">
             <a href="mailto:imadmajid2@gmail.com">
                 imadmajid2@gmail.com
+                <span class="link-emoji">💬</span>
             </a>
-        </p>
+            <a href="#">
+                Telegram
+                <span class="link-emoji">💬</span>
+            </a>
+            <a href="#">
+                LinkedIn
+                <span class="link-emoji">🔗</span>
+            </a>
+        </div>
+    </section>
+    <section id="workflow">
+        <h2>🚀 Workflow</h2>
+        <ul>
+            <li>
+                Gathering requirements and defining project goals
+            </li>
+            <li>
+                Building prototypes and iterating on the design
+            </li>
+            <li>
+                Development
+            </li>
+            <li>
+                Testing and quality assurance
+            </li>
+            <li>
+                Deployment
+            </li>
+            <li onclick="navToSection(event)">
+                <a href="#contact">
+                📦
+                </a>
+            </li>
+        </ul>
     </section>
 
-    <footer>
-        &copy; 2024
-    </footer>
     <script>
-        document.querySelector("nav.menu").onclick = (event) => {
+        let sy = window.scrollY;
+        let scrolling = false;
+        let scrolledDown;
+        let scrollStop;
+        const navLinks = ["landing-a", "projects-a", "contact-a", "workflow-a"]
+        window.addEventListener("scroll", () => {
+            const navLinkIndex = Math.floor(window.scrollY / window.innerHeight);
+            document.querySelector("nav a.current").classList.remove("current");
+            document.querySelector("nav ul").children[navLinkIndex].children[0].classList.add("current");
+
+            scrolledDown = (window.scrollY > sy)
+            sy = window.scrollY;
+            const oldsy = sy;
+            if (scrollStop) clearTimeout(scrollStop)
+            scrollStop = setTimeout(() => {
+                if (oldsy == window.scrollY) {
+                    if (!scrolling) {
+                        scrolling = true;
+                        const section = navLinks.indexOf(document.querySelector("nav a.current").id)
+                        let nextSection = section;
+                        if (scrolledDown) {
+                            nextSection = section <= 2 ? section + 1 : 3;
+                        }
+
+                        const href = document.querySelector("nav ul").children[nextSection].children[0].href;
+                        document.getElementById(href.substr(href.indexOf("#") + 1, href.length)).scrollIntoView({ behavior: 'smooth', block: 'start' })
+                    } else {
+                        scrolling = false;
+                    }
+                }
+            }, 200)
+        })
+
+        let navToSection = (event) => {
             // prevent default behavior, which is a not smooth scrolling
             event.preventDefault();
-            if (event.target.tagName != 'A') return
-            const href = event.target.href;
+            if (event.target.tagName != 'A' && event.target.tagName != 'SPAN') return
+            let href;
+            if (event.target.tagName == 'SPAN') {
+                href = event.target.parentElement.href;
+            } else {
+                href = event.target.href;
+            }
             document.querySelector(href.substr(href.indexOf('#'), href.length)).scrollIntoView({ behavior: 'smooth' });
+            scrolling = true;
         }
+        document.querySelector("nav").onclick = navToSection;
+
         const techLogo = {
             "Python": "python.png",
             "Java": "java.png",
             "C++": "cpp.png",
-            "Figma": "figma.png"
+            "Figma": "figma.png",
+            "Go": "go.png",
+            "Rust": "rust.png",
+            "Flutter": "flutter.png",
+            "FireBase": "firebase.png",
+            "TensorFlow": "tensorflow.png",
+            "PyTorch": "pytorch.ico",
+            "JavaScript": "javascript.png",
+            "TypeScript": "typescript.png"
         }
+
         document.querySelectorAll(".project li").forEach(li => {
             const text = li.textContent;
             li.innerHTML = `<img src="technology logo/${techLogo[text]}">`
         })
+        document.querySelectorAll("#technologies span").forEach(li => {
+            const text = li.textContent;
+            li.innerHTML = `<img src="technology logo/${techLogo[text]}">`
+        })
+
+
+        // new project part 
+        document.getElementById("project-slider").innerHTML += `
+        <div class="new-project">
+            <span class="title">Your Project</span>
+            <span class="date">Today</span>
+            <a href="#contact" onclick="navToSection(event)">
+                Add a description
+            </a>
+        </div>
+        `;
     </script>
 </body>
 
